baml_language/crates/baml_tests/snapshots/diagnostic_errors/type_aliases/baml_tests__diagnostic_errors__type_aliases__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 39129
---
=== HIR2 ===
type user.Json = int | float | string | user.Json[] | map<string, user.Json>
type user.bar = int
type user.foo = user.bar
function user.Bar() -> user.foo  [expr] {
  {  } true
}
function user.Baz() -> user.Json  [expr] {
  {  } "hello"
}
function user.Foo() -> user.foo  [expr] {
  {  } 1
}
class user.NotJSON {
  inner: user.name
}
type user.JSON = int | float | string | bool | user.JSON[] | map<string, baml.json.json>
function user.EchoJSON(i: user.JSON) -> user.JSON  [expr] {
  {  } user.NotJSON { inner: "Whoops" }
}
function user.MakeJSON(i: user.NotJSON) -> user.JSON  [expr] {
  {  } i.inner
}
function user.from_json(j: baml.json.json) -> user.NotJSON  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "inner": self.inner.to_json() }
}
