baml_language/crates/baml_tests/snapshots/diagnostic_errors/type_aliases/baml_tests__diagnostic_errors__type_aliases__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
type user.foo = user.bar
type user.bar = int
function user.Foo() -> user.foo throws never {
  { : 1
    1 : 1
  }
}
function user.Bar() -> user.foo throws never {
  { : true
    true : true
  }
  !! 120..124: type mismatch: expected user.foo, got true
}
type user.Json = int | float | string | user.Json[] | map<string, user.Json>
function user.Baz() -> user.Json throws never {
  { : "hello"
    "hello" : "hello"
  }
}
type user.foo$stream = user.bar$stream
type user.bar$stream = int
type user.Json$stream = int | float | string | user.Json$stream[] | map<string, user.Json$stream>
type user.JSON = int | float | string | bool | user.JSON[] | map<string, baml.json.json>
class user.NotJSON {
  inner: unknown
}
function user.EchoJSON(i: user.JSON) -> user.JSON throws never {
  { : user.NotJSON
    NotJSON { inner: "Whoops" } : user.NotJSON
  }
}
function user.MakeJSON(i: user.NotJSON) -> user.JSON throws never {
  { : unknown
    i.inner : unknown
  }
  !! 92..97: unresolved type: name
}
type user.JSON$stream = int | float | string | bool | user.JSON$stream[] | map<string, baml.json.json$stream>
class user.NotJSON$stream {
  inner: null | unknown
}
