baml_language/crates/baml_tests/snapshots/diagnostic_errors/type_aliases/baml_tests__diagnostic_errors__type_aliases__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 39224
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: type mismatch: expected user.foo, got true
    ╭─[ type_aliases.baml:11:3 ]
    │
 11 │   true
    │   ──┬─  
    │     ╰─── type mismatch: expected user.foo, got true
    │ 
    │ Note: Error code: E0001
────╯

  [type] Error: unresolved type: name
   ╭─[ type_aliases_json.baml:4:8 ]
   │
 4 │   inner name
   │        ──┬──  
   │          ╰──── unresolved type: name
   │ 
   │ Note: Error code: E0002
───╯
