baml_language/crates/baml_tests/snapshots/diagnostic_errors/type_aliases/baml_tests__diagnostic_errors__type_aliases__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.Bar() -> int {
    load_const true
    return
}

function user.Baz() -> Json {
    load_const "hello"
    return
}

function user.EchoJSON(i: JSON) -> JSON {
    alloc_instance user.NotJSON
    load_const "Whoops"
    init_field .inner
    return
}

function user.Foo() -> int {
    load_const 1
    return
}

function user.MakeJSON(i: NotJSON) -> JSON {
    load_var i
    load_field .inner
    return
}
